--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bokumentation.github.io",
+  "name": "bokumentation",
   "type": "module",
   "version": "1.0.0",
   "private": true,
@@ -38,6 +38,7 @@
     "rehype-document": "^7.0.3",
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.1",
+    "rehype-pretty-code": "^0.14.1",
     "remark-emoji": "^5.0.1",
     "remark-math": "^6.0.0",
     "tailwind-merge": "^3.3.0",
